# pokemon-indexer

./: .gitignore  Cargo.toml  README.MD  ecosystem.config.js
src/: main.rs  pokemon.rs
static/: app.js  index.html
