[package]
name = "pokemon-cards"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
colored = "2.0.0"
tokio = {version = "1.20.1", features = ["full"]}
select = "0.5.0"
clap = {version = "3.2.17", features=["derive"]}
serde_json = "1.0.83"
actix-files = "0.6.2"
actix-web = "4.1.0"
actix-cors = "0.6.1"
serde = { version = "1.0", features = ["derive"] }